shale:

  1.3.9 - 25 Jun 2021
    - improved thread performance

  1.3.8 - 31 May 2021
    - removed several compiler warnings
    - improved array and thread library error message

  1.3.7 - 28 May 2021
    - improved thread performance

  1.3.6 - 17 Apr 2021
    - stack operator now displays pointer values rather than bailing

  1.3.5 - 16 Apr 2010
    - the value operator now handles pointers

  1.3.4 - 11 Apr 2021
    - numbers now use lass memory

  1.3.3 - 9 Apr 2021
    - fix zero pointer dereference in the ++ and -- operators when the variable
      is defined but not initialised

  1.3.2 - 5 Mar 2021
    - add support for the string library

  1.3.1 - 23 Feb 2021
    - improved performance of threaded scripts

  1.3.0 - 22 Feb 2021
    - shalelib is now thread-safe
    - use "Error" rather than "Internal error" for exceptions raised
      where no lexical information is available

  1.2.6 - 21 Jan 2021
    - use the cache to allocate some static numbers (version nubmers)
      and strings at startup

  1.2.5 - 17 Jan 2021
    - addition of the ++ and -- operators

  1.2.4 - 11 Jan 2021
    - addition of language option:: shale::

  1.2.3 - 10 Jan 2021
    - addition of left shift (<<) and right shift (>>) operators



string library:

  1.0.1 - 25 Mar 2021
    - initial release of atoi and atof functions
    - shale version 1.3.2

  1.0.0 - 05 Mar 2021
    - initial release
    - shale version 1.3.2



thread library:

  1.0.4 - 31 May 2021
    - Removed some compiler warnings
    - Improves error messages
    - shale version 1.3.8

  1.0.3 - 28 May 2021
    - changed support for the BTree and Cache classes

  1.0.2 - 23 Feb 2021
    - support improved performance of threaded scripts
    - shale version 1.3.1

  1.0.1 - 22 Feb 2021
    - add argument to create thread::()
    - shalelib is now thread-safe
    - shale version 1.3.0
     
  1.0.0 - 21 Feb 2021
    - initial release
    - shale version 1.2.6



primes library:

  1.2.0 - 18 Feb 2021